--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,18 +11,9 @@
     flex-direction: column;
     min-height: 100vh;
     justify-content: flex-start;
+    background-color: var(--light);
   }
-  
-  h1 {
-    font-size: 2.5rem;
-    margin-bottom: 10px;
-  }
-  
-  h2 {
-    font-size: 1.5rem;
-    margin-bottom: 10px;
-  }
-  
+    
   header {
     padding: 40px;
     text-align: left;
@@ -30,6 +21,11 @@
     color: var(--light);
   }
   
+  h1 {
+    font-size: 2.5rem;
+    margin-bottom: 10px;
+  }
+
   header nav {
     display: flex;
     justify-content: right;
@@ -52,7 +48,8 @@
     display: block;
   }
 
-  .aboutme {
+  .aboutme, .portfolio, .contactme {
+    width: 100vw;
     flex: 1;
     background-color: var(--light);
     padding: 50px;
@@ -66,52 +63,56 @@
     height: auto;
   }
   
-  .content {
+  .aboutme-content, .portfolio-content, .contactme-content {
     width: 75%;
-    padding: 50px;
-  }
-
-  .portfolio {
-    width: 100vw;
-    flex: 1;
-    background-color: var(--light);
     padding: 50px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
   }
-  
-  .project {
+
+  .project-card {
     border-style: solid;
     border-width: 1px;
     border-radius: 5px;
     padding: 5px;
-    flex: 0 0 300px;
     margin: 20px 0px;
     display: flex;
     flex-wrap: wrap;
+    flex: 1 0 50%;
+    background-color: var(--nav);
   }
   
-  .project > header {
-    border-radius: 5px 5px 0px 0px;
+  .project-card:first-child {
+    flex: 1 0 100%;
+  }
+
+  .project-card > header {
+    border-radius: 0px 0px 5px 5px;
     padding: 5px;
+    width: 100%;
+    position: relative;
+    bottom: auto;
   }
   
-  .project > p {
+  .project-card > p {
     text-align: center;
+    width: 100%;
   }
   
-  .project > img {
+  .project-card > img {
     width: 100%;
   }
 
-  .contactme {
-    flex: 1;
-    background-color: var(--light);
-    padding: 50px;
+  .contact-card {
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 5px;
+    padding: 5px;
+    flex: 1 0 300px;
+    margin: 20px 0px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    background-color: var(--nav);
   }
 
   footer {
@@ -135,16 +136,15 @@
         display: flex;
     }
       
-    .content {
+    .aboutme-content, .portfolio-content, .contactme-content {
         width: 100%;
         height: 75%;
     }
   }
 
   @media screen and (max-width: 768px) {
-    .content {
+    .portfolio-content {
       flex-direction: column;
-
     }
   }
   
