--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,15 +71,14 @@
   }
 
   .project-card {
-    border-style: solid;
-    border-width: 1px;
+    border-style: none;
     border-radius: 5px;
     padding: 5px;
-    margin: 20px 0px;
+    margin: 15px 15px;
     display: flex;
     flex-wrap: wrap;
-    flex: 1 0 50%;
-    background-color: var(--nav);
+    flex: 1 0 44%;
+    background-color: var(--dark);
   }
   
   .project-card:first-child {
