--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,51 +1,92 @@
 :root {
-    --dark: #152106;
-    --light: #f2f1cc;
-    --nav:  #7c847f;
-    --shadow: #8a8759;
+    --dark: #252525;
+    --light: #d7d7d7;
+    --nav:  #a4a4a4;
+    --shadow: #9e8e9c;
+    --normal-weight: 400;
+    --bold-weight: 700;
   } 
   
+  * {
+    font-family: "Jura", sans-serif;
+    font-size: medium;
+    font-weight: var(--normal-weight);
+  }
+
   body {
-    font-size: 16px;
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
     justify-content: flex-start;
+    min-height: 100vh;
     background-color: var(--light);
   }
-    
-  header {
-    padding: 40px;
+  
+  .siteheader, .title1, .title2, .title3 {
+    color: var(--dark);
+    font-weight: var(--bold-weight);
     text-align: left;
-    background: var(--dark);
-    color: var(--light);
+    padding: 40px;
+    background: var(--shadow);
   }
   
+  .title1, .title2, .title3 {
+    width: 15%;
+    height: auto;
+    justify-content: left;
+  }
+
   .siteheader {
     background-image: url("/assets/images/ABBackground2.png");
   }
 
+  .title1 {
+    background-image: url("/assets/images/ABV-Header1.png");
+  }
+  
+  .title2 {
+    background-image: url("/assets/images/ABSideBar.png");
+  }
+
+  .title3 {
+    background-image: url("/assets/images/ABV-Header3.png");
+  }
+
   h1 {
-    font-size: 2.5rem;
+    font-size: 3rem;
+    font-weight: var(--bold-weight);
+    margin-bottom: 15px;
+  }
+
+  h2 {
+    font-size: 1.4rem;
+    font-weight: var(--bold-weight);
+    margin-bottom: 10px;
+  }
+
+  h3 {
+    font-size: 1.3rem;
+    font-weight: var(--bold-weight);
     margin-bottom: 10px;
   }
 
   header nav {
     display: flex;
     justify-content: right;
+    margin: 15px 0px;
     background-color: var(--light);
   }
   
   header nav a {
     color: var(--dark);
-    padding: 15px 20px;
+    font-weight: var(--bold-weight);
     text-decoration: none;
     text-align: center;
+    padding: 15px 20px;
   }
   
   header nav a:hover {
-    background-color: var(--light);
-    text-decoration: underline;
+    color: var(--light);
+    background-color: var(--dark);
   }
   
   main {
@@ -53,56 +94,35 @@
   }
 
   .aboutme, .portfolio, .contactme {
-    width: 100vw;
-    flex: 1;
-    background-color: var(--light);
-    padding: 50px 50px 50px 10px;
     display: flex;
     flex-wrap: wrap;
+    flex: 1;
     justify-content: space-evenly;
-  }
-
-  .title1, .title2, .title3 {
-    width: 15%;
-    height: auto;
-    justify-content: left;
-  }
-
-  .title1 {
-    background-image: url("/assets/images/ABV-Header1.png");
-    background-color: var(--nav);
-  }
-  
-  .title2 {
-    background-image: url("/assets/images/ABSideBar.png");
-    background-color: var(--nav);
-  }
-
-  .title3 {
-    background-image: url("/assets/images/ABV-Header3.png");
-    background-color: var(--nav);
+    width: 100vw;
+    padding: 50px 50px 50px 10px;
+    background-color: var(--light);
   }
 
   .aboutme-content, .portfolio-content, .contactme-content {
-    width: 75%;
-    padding: 50px;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
+    width: 75%;
+    padding: 50px;
   }
 
   .project-card {
-    border-style: none;
-    border-radius: 5px;
-    padding: 15px;
-    margin: 5px 5px;
     display: flex;
     flex-wrap: wrap;
     flex: 1 0 48%;
     align-items: center;
     justify-content: center;
-    background-color: var(--dark);
+    padding: 15px;
+    margin: 5px 5px;
+    border-style: none;
+    border-radius: 5px;
+    background-color: var(--nav);
   }
   
   .project-card:first-child {
@@ -110,16 +130,17 @@
   }
 
   .project-card > header {
-    border-radius: 0px 0px 5px 5px;
-    padding: 5px;
     width: 100%;
+    padding: 10px;
+    border-radius: 0px 0px 5px 5px;
     position: relative;
     bottom: auto;
+    text-align: center;
   }
   
   .project-card > p {
-    text-align: center;
     width: 100%;
+    text-align: center;
   }
   
   .project-card > img {
@@ -127,25 +148,26 @@
   }
 
   .contact-card {
+    display: flex;
+    flex-wrap: wrap;
+    flex: 1 0 240px;
+    justify-content: center;
+    padding: 5px;
+    margin: 20px 10px;
     border-style: solid;
     border-width: 1px;
     border-radius: 5px;
-    padding: 5px;
-    flex: 1 0 300px;
-    margin: 20px 0px;
-    display: flex;
-    flex-wrap: wrap;
-    background-color: var(--nav);
+    color: var(--light);
+    background-color: var(--dark);
   }
 
   footer {
     width: 100%;
-    bottom: 0;
     padding: 20px;
+    bottom: 0;
     text-align: center;
-    background: var(--dark);
     color: var(--light);
-    margin-top: auto;
+    background: var(--dark);
   }
 
   @media screen and (max-width: 992px) {
@@ -158,24 +180,21 @@
     }
 
     .title1, .title2, .title3 {
+        display: flex;
         width: 100%;
         height: 20%;
-        display: flex;
     }
 
     .title1 {
         background-image: url(/assets/images/ABH-Header1.png);
-        background-color: var(--nav);
     }
     
     .title2 {
-        background-image: url(//assets/images/ABH-Header2.png);
-        background-color: var(--nav);
+        background-image: url(/assets/images/ABH-Header2.png);
     }
     
-    .title1 {
+    .title3 {
         background-image: url(/assets/images/ABH-Header3.png);
-        background-color: var(--nav);
     }
 
     .aboutme-content, .portfolio-content, .contactme-content {
